attempt to update index.Rmd in github pages

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@ this guideline as well.</p>
 limitations of this data set either for that reason. The only types of
 books that I considered in my project were books and e-books, both of
 which were present in this data set. I was additionally interested in
-the trends of e-book vs. book popularity from pre-pandemic, pandemic,
+the trends of E-book vs. book popularity from pre-pandemic, pandemic,
 and post-pandemic time frames. The data set spans from 2017 to 2023, so
 I didn’t have to consider this possible constraint either. The columns
 of this data set that I was interested in was the type of book (PRINT,
